syntax = "proto3";

package ignore_plain;

option go_package = "xgo/tests/pb/pboptions";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

// For test cases ignore field.
message IgnorePlain1 {
  int32 f_int32 = 1 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  int64 f_int64 = 2 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  uint32 f_uint32 = 3 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  uint64 f_uint64 = 4 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  sint32 f_sint32 = 5 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  sint64 f_sint64 = 6 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  sfixed32 f_sfixed32 = 7 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  sfixed64 f_sfixed64 = 8 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  fixed32 f_fixed32 = 9 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  fixed64 f_fixed64 = 10 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  float f_float = 11 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  double f_double = 12 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  bool f_bool1 = 21 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  string f_string1 = 22 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  bytes f_bytes1  = 23 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  external.Enum1 f_enum1 = 31 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  external.Message1 f_message1 = 32 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  google.protobuf.Any f_any1 = 41 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  google.protobuf.Duration f_duration1 = 42 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  google.protobuf.Timestamp f_timestamp1 = 43 [ (json.field) = { json: "t_ignore1"; ignore: true } ];
}
